--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Veercg.GitHub.io by veercg</title>
+    <title>Veer Chandra</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Veercg.GitHub.io</h1>
+        <h1>@veercg</h1>
         <h2></h2>
         <a href="https://github.com/veercg" class="button"><small>Follow me on</small> GitHub</a>
       </div>
