--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html><html lang="en"><head>
+<!doctype html>
+<html lang="en">
+<head>
   <meta charset="utf-8">
   <title>Here</title>
   <base href="/">
@@ -6,9 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.b0ac29cb4dbe7fb2103b.css"></head>
+<link rel="stylesheet" href="styles.0355d29303ab68ffeafa.css"></head>
 <body>
   <app-root></app-root>
-
-
-<script type="text/javascript" src="runtime.6afe30102d8fe7337431.js"></script><script type="text/javascript" src="polyfills.2903ad11212d7d797800.js"></script><script type="text/javascript" src="main.f6ac0d6d97ce93d431a5.js"></script></body></html>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.5a0197f92957052da344.js"></script><script type="text/javascript" src="main.be556f0579c678fdde16.js"></script></body>
+</html>
